--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
-          docker stop my-node-app || true
-          docker rm my-node-app || true
-          docker run -d --name my-node-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
+          sudo docker stop my-node-app || true
+          sudo docker rm my-node-app || true
+          sudo docker run -d --name my-node-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
